feat: add interactive menu with OOP architecture - Add MenuBanco class for UI layer separation - Add BancoService for business logic encapsulation - Add custom exceptions (MontoInvalidoException, SaldoInsuficienteException) - Implement Locale.US for decimal input compatibility - Update README with new project structure